tests/src/frontend/syntax/invalid/lvalue_in_named_call.sk
fun main(): String {
  f.!y{}
}
